packages/core/src/accordion/AccordionHeader.css
.saltAccordionHeader {
  display: flex;
  gap: var(--salt-spacing-100);
  padding: var(--salt-spacing-50) var(--salt-spacing-100);
  border: 0;
  width: 100%;
  min-height: calc(var(--salt-size-base) + var(--salt-spacing-100));
  background: transparent;
  font-size: var(--salt-text-fontSize);
  line-height: var(--salt-text-lineHeight);
  font-family: var(--salt-text-fontFamily);
  color: var(--salt-content-primary-foreground);
  font-weight: var(--salt-text-fontWeight-strong);
  text-align: left;
  cursor: var(--salt-actionable-cursor-hover);
  box-sizing: border-box;
}

.saltAccordionHeader:focus-visible {
  outline: var(--salt-focused-outline);
  outline-offset: calc(-1 * var(--salt-focused-outlineWidth));
}

.saltAccordionHeader-content {
  padding: var(--salt-spacing-75) 0;
  width: 100%;
  box-sizing: border-box;
}

.saltAccordionHeader .saltAccordionHeader-icon {
  height: var(--salt-size-base);
}

.saltAccordionHeader-error {
  background: var(--salt-status-error-background);
}

.saltAccordionHeader-error:focus-visible {
  outline-color: var(--salt-status-error-borderColor);
}

.saltAccordionHeader-warning {
  background: var(--salt-status-warning-background);
}

.saltAccordionHeader-warning:focus-visible {
  outline-color: var(--salt-status-warning-borderColor);
}

.saltAccordionHeader-success {
  background: var(--salt-status-success-background);
}

.saltAccordionHeader-success:focus-visible {
  outline-color: var(--salt-status-error-borderColor);
}

.saltAccordionHeader .saltAccordionHeader-statusIndicator {
  height: var(--salt-size-base);
  margin-left: auto;
}

.saltAccordionHeader:disabled {
  background: transparent;
  color: var(--salt-content-primary-foreground-disabled);
  cursor: var(--salt-actionable-cursor-disabled);
}

